k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: client
  name: client
  namespace: codemotion
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - image: ludusrusso/codemotion-gui
          name: client
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: client
  name: client
  namespace: codemotion
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: client
  type: ClusterIP
