k8s/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
  namespace: codemotion
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - image: ludusrusso/codemotion-api
          name: api
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server
  namespace: codemotion
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: server
  type: ClusterIP
