k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codemotion
  namespace: codemotion
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
    - host: api.kube.ludusrusso.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 80
    - host: app.kube.ludusrusso.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
  tls:
    - hosts:
        - app.kube.ludusrusso.space
      secretName: app.kube.ludusrusso.space-tls
    - hosts:
        - api.kube.ludusrusso.space
      secretName: api.kube.ludusrusso.space-tls
